--- a/sass/base/generic.sass
+++ b/sass/base/generic.sass
@@ -85,12 +85,12 @@ strong
 pre
   background-color: $pre-background
   color: $pre
-  font-size: 0.8em
+  font-size: 0.75em
   white-space: pre
   word-wrap: normal
   code
-    background-color: $pre-background
-    color: $pre
+    background: none
+    color: inherit
     display: block
     font-size: 1em
     overflow-x: auto
