--- a/sass/elements/content.sass
+++ b/sass/elements/content.sass
@@ -24,7 +24,7 @@
   h5,
   h6
     color: $text-strong
-    font-weight: $weight-title-normal
+    font-weight: $weight-normal
     line-height: 1.125
   h1
     font-size: 2em
