--- a/sass/elements/form.sass
+++ b/sass/elements/form.sass
@@ -151,7 +151,7 @@ $input-radius:              $radius !default
 
 .help
   display: block
-  font-size: 0.875em
+  font-size: $size-small
   margin-top: 5px
   @each $name, $pair in $colors
     $color: nth($pair, 1)
@@ -175,7 +175,7 @@ $input-radius:              $radius !default
   position: relative
   text-align: left
   &:not(:last-child)
-    margin-bottom: 10px
+    margin-bottom: 0.75rem
   // Modifiers
   &.has-addons
     display: flex
@@ -278,7 +278,7 @@ $input-radius:              $radius !default
     & > .control
       &:not(:last-child)
         margin-bottom: 0
-        margin-right: 10px
+        margin-right: 0.75rem
       &.is-expanded
         flex-grow: 1
         flex-shrink: 1
