--- a/sass/elements/notification.sass
+++ b/sass/elements/notification.sass
@@ -3,12 +3,13 @@
   +clearfix
   background-color: $background
   border-radius: $radius
-  padding: 16px 20px
+  padding: 1.25rem 1.5rem
   position: relative
   .delete
     border-radius: 0 $radius
-    float: right
-    margin: -16px -20px 0 20px
+    position: absolute
+    right: 0
+    top: 0
   .title,
   .subtitle,
   .content
