--- a/sass/elements/other.sass
+++ b/sass/elements/other.sass
@@ -11,7 +11,7 @@
       margin: 0 20px
       max-width: none
   +widescreen
-    max-width: 1200px
+    max-width: 1080px
 
 .delete
   +delete
@@ -22,17 +22,17 @@
   vertical-align: top
 
 .icon
-  +fa(21px, 24px)
+  +fa(21px, 1.5rem)
   .fa
     font-size: inherit
     line-height: inherit
   // Sizes
   &.is-small
-    +fa(14px, 16px)
+    +fa(14px, 1rem)
   &.is-medium
-    +fa(28px, 32px)
+    +fa(28px, 2rem)
   &.is-large
-    +fa(42px, 48px)
+    +fa(42px, 3rem)
 
 .heading
   display: block
@@ -60,48 +60,3 @@
   display: inline-block
   font-size: $size-medium
   vertical-align: top
-
-.tag
-  align-items: center
-  background-color: $background
-  border-radius: 290486px
-  color: $text
-  display: inline-flex
-  font-size: 12px
-  height: 24px
-  justify-content: center
-  line-height: 16px
-  padding-left: 10px
-  padding-right: 10px
-  vertical-align: top
-  white-space: nowrap
-  .delete
-    margin-left: 4px
-    margin-right: -6px
-  // Colors
-  @each $name, $pair in $colors
-    $color: nth($pair, 1)
-    $color-invert: nth($pair, 2)
-    &.is-#{$name}
-      background-color: $color
-      color: $color-invert
-  // Sizes
-  &.is-small
-    font-size: $size-small
-    height: 20px
-    padding-left: 8px
-    padding-right: 8px
-  &.is-medium
-    font-size: $size-normal
-    height: 32px
-    padding-left: 14px
-    padding-right: 14px
-  &.is-large
-    font-size: $size-5
-    height: 40px
-    line-height: 24px
-    padding-left: 18px
-    padding-right: 18px
-    .delete
-      margin-left: 4px
-      margin-right: -8px
