--- a/sass/utilities/controls.sass
+++ b/sass/utilities/controls.sass
@@ -9,7 +9,7 @@ $control-radius-small: $radius-small !default
   border-radius: $control-radius
   box-shadow: none
   display: inline-flex
-  font-size: 1em
+  font-size: $size-normal
   height: 2.5em
   justify-content: flex-start
   line-height: 1.5
@@ -27,6 +27,7 @@ $control-radius-small: $radius-small !default
   &.is-disabled
     pointer-events: none
 
+// The controls sizes use mixins so they can be used at different breakpoints
 =control-small
   border-radius: $control-radius-small
   font-size: $size-small
