--- a/sass/utilities/variables.sass
+++ b/sass/utilities/variables.sass
@@ -30,18 +30,17 @@ $family-sans-serif: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Ox
 $family-monospace: "Inconsolata", "Consolas", "Monaco", monospace !default
 
 $size-1: 3.5rem !default
-$size-2: 2.5rem !default
-$size-3: 1.75rem !default
+$size-2: 2.75rem !default
+$size-3: 2rem !default
 $size-4: 1.5rem !default
 $size-5: 1.25rem !default
 $size-6: 16px !default
+$size-7: 0.75rem !default
 
-$size-7: 0.875rem !default
-
+$weight-light: 300 !default
 $weight-normal: 400 !default
+$weight-semibold: 500 !default
 $weight-bold: 700 !default
-$weight-title-normal: 300 !default
-$weight-title-bold: 500 !default
 
 // Miscellaneous
 $easing: ease-out !default
@@ -117,7 +116,7 @@ $family-primary: $family-sans-serif !default
 $family-code: $family-monospace !default
 
 $size-small: $size-7 !default
-$size-normal: $size-6 !default
+$size-normal: 1rem !default
 $size-medium: $size-5 !default
 $size-large: $size-4 !default
 
