--- a/docs/css/bulma-docs.css
+++ b/docs/css/bulma-docs.css
@@ -2052,6 +2052,52 @@ a.box:active {
   top: 0.75em;
 }
 
+.icon {
+  background: pink;
+  display: inline-block;
+  font-size: 21px;
+  height: 1.5rem;
+  line-height: 1.5rem;
+  text-align: center;
+  vertical-align: top;
+  width: 1.5rem;
+}
+
+.icon .fa {
+  font-size: inherit;
+  line-height: inherit;
+}
+
+.icon.is-small {
+  display: inline-block;
+  font-size: 14px;
+  height: 1rem;
+  line-height: 1rem;
+  text-align: center;
+  vertical-align: top;
+  width: 1rem;
+}
+
+.icon.is-medium {
+  display: inline-block;
+  font-size: 28px;
+  height: 2rem;
+  line-height: 2rem;
+  text-align: center;
+  vertical-align: top;
+  width: 2rem;
+}
+
+.icon.is-large {
+  display: inline-block;
+  font-size: 42px;
+  height: 3rem;
+  line-height: 3rem;
+  text-align: center;
+  vertical-align: top;
+  width: 3rem;
+}
+
 .image {
   display: block;
   position: relative;
@@ -2318,7 +2364,7 @@ a.box:active {
 .table {
   background-color: white;
   color: #363636;
-  margin-bottom: 20px;
+  margin-bottom: 1.5rem;
   width: 100%;
 }
 
@@ -2326,54 +2372,8 @@ a.box:active {
 .table th {
   border: 1px solid #dbdbdb;
   border-width: 0 0 1px;
-  padding: 8px 10px;
+  padding: 0.5em 0.75em;
   vertical-align: top;
-}
-
-.table td.is-icon,
-.table th.is-icon {
-  padding: 5px;
-  text-align: center;
-  white-space: nowrap;
-  width: 1%;
-}
-
-.table td.is-icon .fa,
-.table th.is-icon .fa {
-  display: inline-block;
-  font-size: 21px;
-  height: 24px;
-  line-height: 24px;
-  text-align: center;
-  vertical-align: top;
-  width: 24px;
-}
-
-.table td.is-icon.is-link,
-.table th.is-icon.is-link {
-  padding: 0;
-}
-
-.table td.is-icon.is-link > a,
-.table th.is-icon.is-link > a {
-  padding: 5px;
-}
-
-.table td.is-link,
-.table th.is-link {
-  padding: 0;
-}
-
-.table td.is-link > a,
-.table th.is-link > a {
-  display: block;
-  padding: 8px 10px;
-}
-
-.table td.is-link > a:hover,
-.table th.is-link > a:hover {
-  background-color: #00d1b2;
-  color: #fff;
 }
 
 .table td.is-narrow,
@@ -2388,7 +2388,7 @@ a.box:active {
 }
 
 .table tr:hover {
-  background-color: whitesmoke;
+  background-color: #fafafa;
 }
 
 .table thead td,
@@ -2420,32 +2420,7 @@ a.box:active {
 
 .table.is-narrow td,
 .table.is-narrow th {
-  padding: 5px 10px;
-}
-
-.table.is-narrow td.is-icon,
-.table.is-narrow th.is-icon {
-  padding: 2px;
-}
-
-.table.is-narrow td.is-icon.is-link,
-.table.is-narrow th.is-icon.is-link {
-  padding: 0;
-}
-
-.table.is-narrow td.is-icon.is-link > a,
-.table.is-narrow th.is-icon.is-link > a {
-  padding: 2px;
-}
-
-.table.is-narrow td.is-link,
-.table.is-narrow th.is-link {
-  padding: 0;
-}
-
-.table.is-narrow td.is-link > a,
-.table.is-narrow th.is-link > a {
-  padding: 5px 10px;
+  padding: 0.25em 0.5em;
 }
 
 .table.is-striped tbody tr:nth-child(even) {
@@ -2658,14 +2633,14 @@ a.box:active {
     max-width: 960px;
   }
   .container.is-fluid {
-    margin: 0 20px;
+    margin: 0 1.5rem;
     max-width: none;
   }
 }
 
 @media screen and (min-width: 1180px) {
   .container {
-    max-width: 1080px;
+    max-width: 1200px;
   }
 }
 
@@ -2732,51 +2707,6 @@ a.box:active {
   font-size: 21px;
   text-align: center;
   vertical-align: top;
-}
-
-.icon {
-  display: inline-block;
-  font-size: 21px;
-  height: 1.5rem;
-  line-height: 1.5rem;
-  text-align: center;
-  vertical-align: top;
-  width: 1.5rem;
-}
-
-.icon .fa {
-  font-size: inherit;
-  line-height: inherit;
-}
-
-.icon.is-small {
-  display: inline-block;
-  font-size: 14px;
-  height: 1rem;
-  line-height: 1rem;
-  text-align: center;
-  vertical-align: top;
-  width: 1rem;
-}
-
-.icon.is-medium {
-  display: inline-block;
-  font-size: 28px;
-  height: 2rem;
-  line-height: 2rem;
-  text-align: center;
-  vertical-align: top;
-  width: 2rem;
-}
-
-.icon.is-large {
-  display: inline-block;
-  font-size: 42px;
-  height: 3rem;
-  line-height: 3rem;
-  text-align: center;
-  vertical-align: top;
-  width: 3rem;
 }
 
 .heading {
