--- a/sass/elements/_all.sass
+++ b/sass/elements/_all.sass
@@ -4,6 +4,7 @@
 @import "button.sass"
 @import "content.sass"
 @import "form.sass"
+@import "icon.sass"
 @import "image.sass"
 @import "notification.sass"
 @import "progress.sass"
