Fix delete element

--- a/docs/_includes/subnav-elements.html
+++ b/docs/_includes/subnav-elements.html
@@ -10,6 +10,9 @@
       <a class="nav-item is-tab {% if page.doc-subtab == 'content' %}is-active{% endif %}" href="{{ site.url }}/documentation/elements/content/">
         Content
       </a>
+      <a class="nav-item is-tab {% if page.doc-subtab == 'delete' %}is-active{% endif %}" href="{{ site.url }}/documentation/elements/delete/">
+        Delete
+      </a>
       <a class="nav-item is-tab {% if page.doc-subtab == 'form' %}is-active{% endif %}" href="{{ site.url }}/documentation/elements/form/">
         Form
       </a>
