--- a/docs/bulma-docs.sass
+++ b/docs/bulma-docs.sass
@@ -357,6 +357,9 @@ $structure-invert: $danger-invert
   .expand
     border-right-width: 1px
     right: 50px
+  +tablet
+    pre
+      white-space: pre-wrap
 
 +tablet
   .section:not(.is-fullwidth) > .example:not(.is-fullwidth)
