--- a/sass/elements/notification.sass
+++ b/sass/elements/notification.sass
@@ -1,15 +1,13 @@
 .notification
   +block
-  +clearfix
   background-color: $background
   border-radius: $radius
-  padding: 1.25rem 1.5rem
+  padding: 1.25rem 2.5rem 1.25rem 1.5rem
   position: relative
   .delete
-    border-radius: 0 $radius
     position: absolute
-    right: 0
-    top: 0
+    right: 0.5em
+    top: 0.5em
   .title,
   .subtitle,
   .content
